<resources>
    <string name="app_name">TLS</string>

    <string name="Unidentified">לא מזוהה</string>

    <!-- Areas -->
    <string name="lotem">לוטם</string>
    <string name="topaz">טופז</string>

    <!-- Gender -->
    <string name="boys">בנים</string>
    <string name="girls">בנות</string>

    <!-- FAB labels -->
    <string name="new_person">חייל חדש</string>
    <string name="new_room">חדר חדש</string>
    <string name="new_admin">מנהל חדש</string>

    <!-- Add room form -->
    <string name="room_name_hint">שם חדר</string>
    <string name="room_type_hint">שיוך החדר</string>
    <string name="room_max_capacity">תפוסה מרבית</string>
    <string name="room_gender_hint">סוג החדר</string>

    <!-- Add person form -->
    <string name="person_full_name_hint">שם מלא</string>
    <string name="person_mid_hint">מספר אישי</string>
    <string name="person_phone_number_hint">מספר טלפון</string>
    <string name="person_hometown_hint">כתובת מגורים</string>
    <string name="person_release_date_hint">תאריך שחרור</string>
    <string name="person_branch_hint">ענף</string>
    <string name="must">חובה</string>
    <string name="sign">קבע</string>
    <string name="room_selection">בחר חדר</string>

    <string name="insert">הוסף</string>
    <string name="cancel">בטל</string>
    <string name="update">עדכן</string>
    <string name="send">שלח</string>
    <string name="accept">אישור</string>
    <string name="choose">בחר</string>

    <string name="make_leader_action">הפוך לאחראי חדר</string>
    <string name="make_phone_call_action">התקשר</string>
    <string name="send_message_action">שלח הודעה</string>

    <string name="insert_to_room_action">הכנס לחדר</string>
    <string name="delete_action">מחק</string>

    <string name="complete_action">תוקן</string>
    <string name="send_to_action">שלח אל</string>

    <string name="empty_rooms_list">רשימת חדרים ריקה</string>
    <string name="empty_persons_list">רשימת חיילים ריקה</string>
    <string name="empty_waiting_list">רשימת המתנה ריקה</string>
    <string name="empty_fault_list">אין תקלות פתוחות</string>

    <string name="main_options_send_message">שלח הודעה לאחראי החדרים</string>
    <string name="main_options_send_request_form">שלח טופס</string>
    <string name="main_option_display_all_requests">רשימת המתנה</string>
    <string name="main_option_display_all_faults">תקלות פתוחות</string>
    <string name="main_options_report_fault">דווח על תקלה</string>
    <string name="main_options_send_message_to_shoval">שלח הודעה לשובל</string>

    <string name="room_options_send_message_to_room">שלח הודעה לכל החדר</string>

    <string name="error_fill_missing_fields">נא למלא שדות חסרים</string>
    <string name="error_message_internet_connection">אין חיבור אינטרנט זמין</string>
    <string name="error_message_google_account_access">האפליקציה צריכה לגשת לחשבון הגוגל שלך</string>
    <string name="error_message_google_play_services">האפליקציה דורשת שירותי גוגל. יש להתקין ולנסות שוב</string>
    <string name="error_invalid_full_name">יש לכתוב שם מלא</string>
    <string name="error_invalid_home_town">יש לכתוב עיר מגורים</string>
    <string name="error_invalid_branch">יש לכתוב ענף</string>
    <string name="error_invalid_release_date">יש לבחור תאריך שחרור</string>
    <string name="error_invalid_mid">מספר אישי אינו תקין</string>
    <string name="error_invalid_phone_number">מספר טלפון אינו תקין</string>
    <string name="error_invalid_room_name">יש לכתוב שם חדר</string>
    <string name="error_invalid_max_capacity">יש לכתוב תפוסה מירבית</string>
    <string name="error_whatsapp_not_installed">Whatsapp אינו מותקן</string>
    <string name="error_no_send_sms_permissions">לאפליקציה אין הרשאות לשלוח הודעה</string>
    <string name="error_no_call_permissions">לאפליקציה אין הרשאות להתקשר</string>
    <string name="error_call_permissions_required">האפליקציה צריכה הרשאות להתקשר</string>
    <string name="error_sms_permissions_required">האפליקציה צריכה הרשאות לשלוח הודעה</string>
    <string name="error_invalid_password_length">סיסמא באורך 6–20 תווים</string>
    <string name="error_invalid_message_length">יש לכתוב הודעה</string>
    <string name="error_login_failed">התחברות נכשלה</string>

    <string name="success_sms_sent">ההודעה נשלחה בהצלחה!</string>

    <string name="send_form_phone_number_hint">מספר טלפון</string>
    <string name="send_form_title">שליחת טופס</string>
    <string name="send_form_message">הכנס מספר טלפון אליו יישלח הטופס שבחרת</string>

    <string name="send_message_hint">הודעה</string>
    <string name="send_message_title">שלח הודעה</string>
    <string name="send_message_message">כתוב הודעה שתישלח לכל אחראי החדרים</string>
    <string name="send_message_to_room_message">כתוב הודעה שתישלח לכל החדר</string>

    <string name="change_password_title">אתחל סיסמא</string>
    <string name="change_password_message">קבע סיסמא חדשה</string>

    <string name="update_password">שנה סיסמא</string>

    <string name="insert_to_room_title">בחירת חדר</string>
    <string name="insert_to_room_message">יש לבחור את החדר הפנוי</string>

    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="warning_title">שים לב</string>
    <string name="warning_message">האם אתה בטוח שברצונך למחוק שורה זו?</string>
    <string name="loading">טוען נתונים...</string>

    <string name="waiting_list_count">כמות ממתינים:   </string>
    <string name="open_faults">תקלות פתוחות:   </string>
    <string name="zero">0</string>

    <string name="fault_fix_message">שלום, התקלה בחדר המגורים תוקנה.</string>

    <string name="login_password">סיסמא</string>
    <string name="login_mid">מספר אישי</string>
    <string name="login_login">התחבר</string>
    <string name="login_progress_message">מתחבר...</string>

</resources>
