<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_send_message"
        android:orderInCategory="100"
        android:title="@string/main_options_send_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_send_form"
        android:orderInCategory="200"
        android:title="@string/main_options_send_request_form"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_display_all_requests"
        android:orderInCategory="300"
        android:title="@string/main_option_display_all_requests"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_display_all_faults"
        android:orderInCategory="400"
        android:title="@string/main_option_display_all_faults"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_report_fault"
        android:orderInCategory="500"
        android:title="@string/main_options_report_fault"
        app:showAsAction="never" />

    <item android:id="@+id/option_send_message_to_shoval"
        android:orderInCategory="600"
        android:title="@string/main_options_send_message_to_shoval"
        app:showAsAction="never" />
</menu>